fix(): qr icon not centered

--- a/src/app/components/header-item/header-item.component.scss
+++ b/src/app/components/header-item/header-item.component.scss
@@ -159,7 +159,7 @@
 .qr-button {
   width: 40px;
   height: 40px;
-  padding: 10px;
+  padding: 12px;
   border-radius: 100px;
   background-color: #f5f5f7;
   border: none;
